Fixed z-index issue for new user on feed page

--- a/react-app/src/components/FeedPage/FeedPage.css
+++ b/react-app/src/components/FeedPage/FeedPage.css
@@ -12,9 +12,9 @@
 
 .empty-feed-header {
     padding: 24px;
-    
+
     position: absolute;
-    z-index: 10;
+    z-index: 4;
     top: 50px; left: 0; right: 0;
     margin: 0 auto;
     background-color: rgba(252, 248, 247, 0.712);
@@ -22,7 +22,7 @@
 }
 .empty-feed-header * {
     color: white;
-    
+
 }
 
 
